fpp_analysis/src/test/structs/format_too_many_repls.ref.txt
error: too many format specifiers
 --> [ local path prefix ]/structs/format_too_many_repls.fpp:1:30
  |
1 | struct s { x: U32 format "{} {} {}" }
  |                              ^^ no field to format
  |
 ::: [ local path prefix ]/structs/format_too_many_repls.fpp:1:33
  |
1 | struct s { x: U32 format "{} {} {}" }
  |                                 ^^ no field to format

